[package]
name = "jlog-cli"
version = "0.1.2"
edition = "2021"
authors = ["Jakub Szymkowiak <jakub@jakubszymkowiak.com>"]
description = "Minimalist terminal tool for quickly logging categorized notes with tags, project support, and export options"
license = "MIT"
repository = "https://github.com/Jakub-Szymkowiak/jlog"
homepage = "https://github.com/Jakub-Szymkowiak/jlog"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rusqlite = { version = "0.29", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
