[package]
name = "qlg"
version = "0.0.1"
edition = "2021"
authors = ["Jakub Szymkowiak <jakub@jakubszymkowiak.com>"]
description = "Minimalist terminal tool for quickly logging categorized notes with tags, project support, and export options"
license = "MIT"
repository = "https://github.com/Jakub-Szymkowiak/glg"
homepage = "https://github.com/Jakub-Szymkowiak/glg"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rusqlite = { version = "0.29", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"